--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mediainfo (22.06-1deepin0) unstable; urgency=medium
+
+  * No source change upload against GCC 12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Fri, 20 Sep 2024 12:13:33 +0800
+
 mediainfo (22.06-1) unstable; urgency=medium
 
   * [c18d576] New upstream version 22.06
